[package]
name = "pg-maintenance"
version = "0.1.2"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
anyhow = "1.0.101"
chrono = "0.4.43"
log = "0.4.29"
env_logger = "0.11.8"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
