[package]
name = "pg-maintenance"
version = "0.1.5"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.52.2", features = ["full"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
anyhow = "1.0.102"
chrono = "0.4.44"
log = "0.4.29"
env_logger = "0.11.10"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
